@@ -21,7 +21,7 @@ executable hamsql
   other-extensions:    OverloadedStrings, FlexibleContexts, ScopedTypeVariables,
                        TemplateHaskell, DeriveDataTypeable, DeriveGeneric
   
-  build-depends:       base >=4.7 && <4.9,
+  build-depends:       base >=4.6,
                        text >=1.2 && <1.3,
                        network-uri >=2.6 && <2.7,
                        optparse-applicative >=0.12 && <0.13,
